# polkavm

./: BENCHMARKS.md  CLAUDE.md  Cargo.toml
.github/workflows/: rust.yml
benches/: Cargo.toml  run.sh
benches/src/: main.rs
capi/: polkavm_guest.h
ci/jobs/: build-and-run-substrate-node.sh  build-and-test-linux.sh  build-and-test-macos.sh  build-and-test-pallet-revive.sh  build-and-test.sh  build-guests.sh  clippy.sh  fuzz.sh  link-westend-runtime-blob.sh  rustfmt.sh
ci/jobs/proxy-crates/polkavm-derive014/: Cargo.toml
ci/jobs/proxy-crates/polkavm-derive018/: Cargo.toml
crates/polkavm/: Cargo.toml
crates/polkavm-assembler/src/: amd64.rs  assembler.rs
crates/polkavm-common/: Cargo.toml
crates/polkavm-common/src/: assembler.rs  cast.rs  hasher.rs  lib.rs  operation.rs  program.rs  regmap.rs  simulator.rs  utils.rs  varint.rs  writer.rs  zygote.rs
crates/polkavm-derive/: Cargo.toml  README.md
crates/polkavm-derive-impl/: Cargo.toml
crates/polkavm-derive-impl/src/: export.rs  import.rs
crates/polkavm-derive/src/: lib.rs
crates/polkavm-disassembler/src/: lib.rs
crates/polkavm-linker/: Cargo.toml  README.md  riscv32emac-unknown-none-polkavm.json  riscv64emac-unknown-none-polkavm.json
crates/polkavm-linker/src/: dwarf.rs  elf.rs  lib.rs  program_from_elf.rs  riscv.rs
crates/polkavm-linux-raw/src/: arch_amd64_bindings.rs  io_uring.rs  lib.rs
crates/polkavm-test-data/: Cargo.toml  build.rs
crates/polkavm-test-data/src/: lib.rs
crates/polkavm-zygote/src/: main.rs
crates/polkavm/src/: api.rs  bit_mask.rs  compiler.rs  config.rs  error.rs  gas.rs  generic_allocator.rs  interpreter.rs  lib.rs  linker.rs  module_cache.rs  mutex_no_std.rs  mutex_std.rs  page_set.rs  page_set_sse.rs  sandbox.rs  shm_allocator.rs  tests.rs  tests_riscv.rs  utils.rs
examples/doom/: Cargo.toml
examples/doom/roms/: doom.polkavm  relink.sh
examples/quake/: Cargo.toml  README.md
examples/quake/code/: quake.polkavm
examples/quake/data/: autoexec.cfg
examples/quake/src/: keys.rs  main.rs  vm.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_interpreter.rs  fuzz_linker.rs  fuzz_page_set.rs  fuzz_polkavm.rs  fuzz_program_blob.rs
guest-programs/: Cargo.toml  bench-common.rs  build-benchmarks.sh  build-common.sh  build-examples.sh  build-test-data.sh  riscv32emac-unknown-none-polkavm.json  riscv64emac-unknown-none-polkavm.json  rust-toolchain.toml
guest-programs/.cargo/: config.toml
guest-programs/asm-tests/: build-asm-tests.sh  reloc_add_sub_64.S  reloc_hi_lo_64.S
guest-programs/asm-tests/output/: reloc_add_sub_64.elf  reloc_hi_lo_64.elf
guest-programs/bench-memset/: Cargo.toml
guest-programs/bench-memset/src/: main.rs
guest-programs/bench-minimal/: Cargo.toml
guest-programs/bench-pinky/: Cargo.toml
guest-programs/bench-pinky/src/: main.rs
guest-programs/bench-prime-sieve/: Cargo.toml
guest-programs/bench-prime-sieve/src/: main.rs
guest-programs/output/: example-hello-world.polkavm
guest-programs/riscv-tests/: .gitignore  build.rb  riscv_test.h
guest-programs/riscv-tests/output/rv32ua/: amoadd_w.elf  amoand_w.elf  amomax_w.elf  amomaxu_w.elf  amomin_w.elf  amominu_w.elf  amoor_w.elf  amoswap_w.elf  amoxor_w.elf
guest-programs/riscv-tests/output/rv32uc/: rvc.elf
guest-programs/riscv-tests/output/rv32ui/: add.elf  addi.elf  and.elf  andi.elf  beq.elf  bge.elf  bgeu.elf  blt.elf  bltu.elf  bne.elf  jal.elf  jalr.elf  lb.elf  lbu.elf  lh.elf  lhu.elf  lui.elf  lw.elf  ma_data.elf  or.elf  ori.elf  sb.elf  sh.elf  simple.elf  sll.elf  slli.elf  slt.elf  slti.elf  sltiu.elf  sltu.elf  sra.elf  srai.elf  srl.elf  srli.elf  sub.elf  sw.elf  xor.elf  xori.elf
guest-programs/riscv-tests/output/rv32um/: div.elf  divu.elf  mul.elf  mulh.elf  mulhsu.elf  mulhu.elf  rem.elf  remu.elf
guest-programs/riscv-tests/output/rv32uzbb/: andn.elf  clz.elf  cpop.elf  ctz.elf  max.elf  maxu.elf  min.elf  minu.elf  orc_b.elf  orn.elf  rev8.elf  rol.elf  ror.elf  rori.elf  sext_b.elf  sext_h.elf  xnor.elf  zext_h.elf
guest-programs/riscv-tests/output/rv64ua/: amoadd_d.elf  amoadd_w.elf  amoand_d.elf  amoand_w.elf  amomax_d.elf  amomax_w.elf  amomaxu_d.elf  amomaxu_w.elf  amomin_d.elf  amomin_w.elf  amominu_d.elf  amominu_w.elf  amoor_d.elf  amoor_w.elf  amoswap_d.elf  amoswap_w.elf  amoxor_d.elf  amoxor_w.elf
guest-programs/riscv-tests/output/rv64uc/: rvc.elf
guest-programs/riscv-tests/output/rv64ui/: add.elf  addi.elf  addiw.elf  addw.elf  and.elf  andi.elf  beq.elf  bge.elf  bgeu.elf  blt.elf  bltu.elf  bne.elf  jal.elf  jalr.elf  lb.elf  lbu.elf  ld.elf  lh.elf  lhu.elf  lui.elf  lw.elf  lwu.elf  ma_data.elf  or.elf  ori.elf  sb.elf  sd.elf  sh.elf  simple.elf  sll.elf  slli.elf  slliw.elf  sllw.elf  slt.elf  slti.elf  sltiu.elf  sltu.elf  sra.elf  srai.elf  sraiw.elf  (+10 more)
guest-programs/riscv-tests/output/rv64um/: div.elf  divu.elf  divuw.elf  divw.elf  mul.elf  mulh.elf  mulhsu.elf  mulhu.elf  mulw.elf  rem.elf  remu.elf  remuw.elf  remw.elf
guest-programs/riscv-tests/output/rv64uzbb/: andn.elf  clz.elf  clzw.elf  cpop.elf  cpopw.elf  ctz.elf  ctzw.elf  max.elf  maxu.elf  min.elf  minu.elf  orc_b.elf  orn.elf  rev8.elf  rol.elf  rolw.elf  ror.elf  rori.elf  roriw.elf  rorw.elf  sext_b.elf  sext_h.elf  xnor.elf  zext_h.elf
guest-programs/simplealloc/: Cargo.toml
guest-programs/simplealloc/src/: lib.rs
guest-programs/test-blob/: Cargo.toml
guest-programs/test-blob/src/: common.rs  lib.rs  main.rs
test-data/: bench-pinky_32.elf.zst  bench-pinky_64.elf.zst  doom_64.elf.zst  test-blob_32.elf.zst  test-blob_64.elf.zst
tools/benchtool/: 02-run-benchmarks.rb  03-analyze-benchmarks.rb  Cargo.toml
tools/benchtool/src/: backend.rs  main.rs
tools/benchtool/wazero/: go.mod
tools/gastool/: Cargo.toml
tools/gastool/src/: main.rs  system.rs
tools/polkatool/: Cargo.toml
tools/polkatool/src/: main.rs
tools/polkavm-linux-raw-generate/src/: main.rs  wrapper.h
tools/spectool/: Cargo.toml
tools/spectool/spec/: pyproject.toml  schema.asn  schema.json  validate-asn-schema.py  validate-asn-schema.sh
tools/spectool/src/: main.rs
(+242 files in other folders)
