[package]
name = "benches"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[dependencies]
polkavm = { workspace = true, features = ["export-internals-for-testing"] }
criterion = "0.7.0"
oorandom = "11.1.5"

[lints]
workspace = true
