[package]
name = "polkavm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
libfuzzer-sys = "0.4"

[dependencies.polkavm]
path = "../crates/polkavm"
features = ["export-internals-for-testing"]

[dependencies.polkavm-linker]
path = "../crates/polkavm-linker"

[dependencies.polkavm-common]
path = "../crates/polkavm-common"
features = ["arbitrary"]

[[bin]]
name = "fuzz_shm_allocator"
path = "fuzz_targets/fuzz_shm_allocator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_generic_allocator"
path = "fuzz_targets/fuzz_generic_allocator.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_linker"
path = "fuzz_targets/fuzz_linker.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_polkavm"
path = "fuzz_targets/fuzz_polkavm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_program_blob"
path = "fuzz_targets/fuzz_program_blob.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_page_set"
path = "fuzz_targets/fuzz_page_set.rs"
test = false
doc = false
bench = false

[workspace]
resolver = "2"
members = ["."]

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(polkavm_dev_debug_zygote)'] }
