[profile.release]
lto = "fat"
panic = "abort"
opt-level = 3
codegen-units = 1
debug = true

[profile.no-lto]
inherits = "release"
lto = false

[workspace]
resolver = "2"
members = [
    # Examples:
    "example-hello-world",

    # Benchmarks:
    "bench-minimal",
    "bench-memset",
    "bench-pinky",
    "bench-prime-sieve",

    # Utilities
    "simplealloc",

    # Tests
    "test-blob",
]

[workspace.dependencies]
picoalloc = { version = "5.0.0", no-default-features = true }

[workspace.lints.rust]
unexpected-cfgs = "allow"
static_mut_refs = "allow"
