[package]
name = "polkatool"
version = "0.17.1"
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A swiss knife toolkit for PolkaVM"

[dependencies]
clap = { workspace = true, features = ["derive"] }
env_logger = { workspace = true }
iced-x86 = { workspace = true, features = ["code_asm"] }
polkavm = { workspace = true }
polkavm-common = { workspace = true }
polkavm-disassembler = { workspace = true }
polkavm-linker = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []
jemalloc = ["dep:tikv-jemallocator"]
